<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="82dp"
        android:text="@string/textEvenOdd"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="217dp"
        android:layout_height="92dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="92dp"
        android:layout_marginTop="610dp"
        android:text="Hello World!"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/textNumberInWord"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="137dp"
        android:layout_marginTop="141dp"
        android:text="@string/NumberToWord"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textIsLarger"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="261dp"
        android:text="@string/isLarger"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textMultiple"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="375dp"
        android:text="@string/isMultiple"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="300dp"
        android:layout_marginTop="24dp"
        android:text="Even/Odd" />

    <Button
        android:id="@+id/butClearEvenOdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="300dp"
        android:layout_marginTop="75dp"
        android:text="@string/butClear" />

    <Button
        android:id="@+id/buttonThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="300dp"
        android:layout_marginTop="136dp"
        android:text="@string/Word" />

    <Button
        android:id="@+id/buttonFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="300dp"
        android:layout_marginTop="195dp"
        android:text="@string/Compare" />

    <Button
        android:id="@+id/buttonFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="300dp"
        android:layout_marginTop="248dp"
        android:text="@string/butClear" />

    <EditText
        android:id="@+id/txtNumber"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="number to find if its even or odd"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editNumberInWord"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="140dp"
        android:ems="10"
        android:hint="number"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editLargeNumber1"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="205dp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editLargeNumber2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="136dp"
        android:layout_marginTop="205dp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editMultiple1"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="320dp"
        android:ems="10"
        android:inputType="number"
        android:text="0" />

    <EditText
        android:id="@+id/editMultiple2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="128dp"
        android:layout_marginTop="320dp"
        android:ems="10"
        android:inputType="number"
        android:text="0" />

    <Button
        android:id="@+id/butMultiple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="300dp"
        android:layout_marginBottom="370dp"
        android:text="@string/Multiple" />

    <Button
        android:id="@+id/butMultipleClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="300dp"
        android:layout_marginBottom="320dp"
        android:text="@string/butClear" />

</RelativeLayout>